Add research page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Gusman's blog"
 description: > 
-
+    Stand on the shoulders of giants
 author: Kamill Gusmanov
 email: kamill.gusmanov@gmail.com
 github_username: kgusman
